--- a/css/style.css
+++ b/css/style.css
@@ -404,9 +404,8 @@ div.table_tab {
   -moz-user-input: enabled;
   user-select: none;
 }
-div#List,.main-table {border: 1px solid #A0A0A0;}
 
-div.cont {padding: 6px; font-size: 11px;}
+div.cont {padding: 6px;}
 
 .tabbar {
   flex: 0 0 18px;
