--- a/plugins/theme/themes/Acid/stable.css
+++ b/plugins/theme/themes/Acid/stable.css
@@ -1,4 +1,4 @@
-.stable-head { background: #272E36; border-color: #A0A0A0 #A0A0A0 #A0A0A0 #A0A0A0; }
+.stable-head {background: #272E36;}
 .stable-head table tr {background: transparent url(./images/header.gif) repeat-x scroll center top}
 .stable-head table tr td { border-color: #A0A0A0 #A0A0A0 #A0A0A0 #A0A0A0; background: transparent url(./images/blank.gif) no-repeat scroll right center; color: #00ff00; font-weight: bold;}
 .stable-head div.resz {background: transparent url(./images/s.gif) no-repeat scroll left center; }
